--- a/home-darts-web/src/styles/_mixins.scss
+++ b/home-darts-web/src/styles/_mixins.scss
@@ -11,3 +11,9 @@
     @content;
   }
 }
+
+@mixin breakpoint-desktop {
+  @media screen and (min-width: $breakpoint-desktop) {
+    @content;
+  }
+}
