--- a/home-darts-web/src/app/app.component.scss
+++ b/home-darts-web/src/app/app.component.scss
@@ -1,5 +1,5 @@
 @import '../styles/variables';
-@import '../styles/mixins';
+@import '../styles/utils/mixins';
 
 .header {
   height: $header-height;
@@ -10,10 +10,10 @@
 }
 
 .menu-button {
-  display: none;
+  display: initial;
 
-  @include breakpoint-mobile {
-    display: initial;
+  @include breakpoint-min(md) {
+    display: none;
   }
 }
 
