front. refactoring stats atc hit rate heat map

--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
@@ -33,7 +33,10 @@
 
       <div class="block p-8 pl-24 flex">
         <p class="mr-24">Following sectors</p>
-        <p class="mr-16" *ngFor="let sector of ((upcomingSectors$ | async) ?? []) | sectorsWithPrefixes: hitDetectionMode">{{ sector }}</p>
+        <p
+          *ngFor="let sector of ((upcomingSectors$ | async) ?? []) | sectorsWithPrefixes: hitDetectionMode"
+          class="mr-16" 
+        >{{ sector }}</p>
       </div>
     </div>
   }
