--- a/home-darts-web/src/styles/_colors.scss
+++ b/home-darts-web/src/styles/_colors.scss
@@ -6,3 +6,4 @@ $copyright-text-color: #C0C2CD;
 $accent-green-color: #7FA47F;
 $accent-red-color: #CD6868;
 $error-screen-color: #9CA6DE;
+$chip-bg-color: #E0E0E0;
