--- a/home-darts-web/src/app/screens/statistics/components/atc-statistics-card/atc-statistics-card.component.scss
+++ b/home-darts-web/src/app/screens/statistics/components/atc-statistics-card/atc-statistics-card.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/utils/mixins';
+@import '../../../../../styles/mixins/breakpoint';
 
 .atc-stats-card-params {
   display: grid;
