--- a/home-darts-web/src/styles/mixins/_breakpoint.scss
+++ b/home-darts-web/src/styles/mixins/_breakpoint.scss
@@ -1,6 +1,5 @@
 @use 'sass:map';
-@import '../variables';
-@import './breakpoints';
+@import '../variables/breakpoints';
 
 @mixin breakpoint-min($size) {
   @include breakpoint($size, min) {
