--- a/home-darts-web/src/app/modules/core/components/sidenav-container/sidenav-container.component.scss
+++ b/home-darts-web/src/app/modules/core/components/sidenav-container/sidenav-container.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../../styles/variables';
-@import '../../../../../styles/utils/mixins';
+@import '../../../../../styles/mixins/breakpoint';
 
 .drawer-container {
   height: calc(100vh - $header-height);
