--- a/home-darts-web/src/app/screens/settings/settings.component.scss
+++ b/home-darts-web/src/app/screens/settings/settings.component.scss
@@ -1,12 +1,12 @@
-@import '../../../styles/colors';
+@use '../../../styles/variables/palette' as palette;
 @import '../../../styles/variables';
-@import '../../../styles/utils/mixins';
+@import '../../../styles/mixins/breakpoint';
 
 :host {
   display: block;
   width: 100%;
   height: calc(100dvh - $header-height);
-  background-color: $block-color;
+  background-color: palette.$block;
 
   @include breakpoint-min(md) {
     background-color: inherit;
