--- a/home-darts-web/src/styles/_block.scss
+++ b/home-darts-web/src/styles/_block.scss
@@ -1,9 +1,9 @@
-@import './colors';
+@use './variables/palette' as palette;
 @import './variables';
-@import './utils/mixins';
+@import './mixins/breakpoint';
 
 @mixin block {
-  background: $block-color;
+  background: palette.$block;
   border-radius: 4px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, .12);
 }
