--- a/home-darts-web/src/styles/fonts/_roboto.scss
+++ b/home-darts-web/src/styles/fonts/_roboto.scss
@@ -1,4 +1,4 @@
-@use 'sass:map';
+@import '../mixins/font-faces';
 
 $subsets: (
   cyrillic: 'U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116',
@@ -10,22 +10,5 @@ $subsets: (
 $styles: normal, italic;
 
 $weights: 100, 300, 400, 500, 700, 900;
-
-@mixin font-faces($font-family, $subsets, $styles, $weights) {
-  @each $subset in map-keys($subsets) {
-    @each $style in $styles {
-      @each $weight in $weights {
-        @font-face {
-          font-family: '#{$font-family}';
-          font-style: $style;
-          font-weight: $weight;
-          font-display: swap;
-          src: url('../../assets/fonts/#{$font-family}/subsets/#{$subset}/#{$style}-#{$weight}.woff2') format('woff2');
-          unicode-range: unquote(map.get($subsets, $subset));
-        }
-      }
-    }
-  }
-}
 
 @include font-faces(Roboto, $subsets, $styles, $weights);
