--- a/home-darts-web/src/styles.scss
+++ b/home-darts-web/src/styles.scss
@@ -1,6 +1,6 @@
 @import './styles/fonts';
 @import './styles/spacing';
 @import './styles/main';
-@import './styles/material-overrides';
+@import './styles/libs-overrides';
 @import './styles/block';
 @import './styles/flex';
