--- a/home-darts-web/src/styles/_libs-overrides.scss
+++ b/home-darts-web/src/styles/_libs-overrides.scss
@@ -11,3 +11,7 @@
 mat-form-field.mat-mdc-form-field.mat-form-no-subscript > .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
+
+ngx-skeleton-loader .skeleton-loader.progress {
+  margin-bottom: 0;
+}
