front. atc stats store

--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -13,5 +13,5 @@
   </div>
 
   <hd-statistics-cards class="mb-48"></hd-statistics-cards>
-  <hd-atc-statistics [playerId]="playerId" [stats]="stats?.aroundTheClock"></hd-atc-statistics>
+  <hd-atc-statistics></hd-atc-statistics>
 </div>
